huffyuvdec: fix old (v1) rgba

Commit deadcf5e misplaced a hunk.

Fixes ticket #3877.

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>